# VerdantFoundry

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: README.md
backend/ai-engine/: README.md  pyproject.toml  requirements.txt
backend/ai-engine/app/: __init__.py  config.py  main.py
backend/ai-engine/app/api/: health.py  llm.py  memory.py  research.py  tools.py
backend/ai-engine/app/services/: agent_orchestrator.py  embedding_service.py  event_bus.py  qdrant_service.py  research_pipeline.py
backend/ai-engine/app/workers/: experiment_consumer.py  memory_consumer.py  research_consumer.py  simulation_consumer.py
backend/ai-engine/tests/: test_research_pipeline.py
backend/api-gateway/: package.json
backend/api-gateway/prisma/: schema.prisma
backend/api-gateway/src/: app.module.ts  health.controller.ts  main.ts
backend/api-gateway/src/agents/: agents.controller.ts  agents.service.ts
backend/api-gateway/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/api-gateway/test/: research.e2e-spec.ts
frontend/: README.md  build.ts  bunfig.toml  clean-full.ts  clean.ts  index.html  metadata.json  package.json  preview.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Layout.tsx  (+7 more)
frontend/src/hooks/: useApi.ts  useTheme.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Agents.tsx  Dashboard.tsx  Evolution.tsx  Kernel.tsx  Landing.tsx  Login.tsx  Memory.tsx  Reports.tsx  Research.tsx  Settings.tsx  Tools.tsx
frontend/src/store/: useStore.ts
(+64 files in other folders)
