[project]
name = "verdant-ai-engine"
version = "0.1.0"
description = "Agent & AI Engine for Verdant Foundry"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "httpx>=0.27",
    "qdrant-client>=1.12",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "aio-pika>=9.4.0",
    "redis>=5.0.0",
    "pika>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
